--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css"/>
     <title>Weather Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="cityList">
+            City
+            <input type="text" id="location"/>
+            <button id="submitBtn">Submit</button>
+        </div>
+        <div class="mainDisplay">
+            Weather report will go here
+        </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
