get and set current variables from api

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="text" id="location"/>
             <button id="submitBtn">Submit</button>
         </div>
-        <div class="mainDisplay">
+        <div id="mainDisplay">
             Weather report will go here
         </div>
     </div>
