--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
             <input type="text" id="location"/>
             <button id="submitBtn">Submit</button>
         </div>
-        <div id="mainDisplay">
-            Weather report will go here
-        </div>
+        <div id="mainDisplay"></div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="index.js"></script>
