--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             Search for a city: <br>
             <input type="text" id="location"/>
             <button id="submitBtn"><i class="fas fa-search"></i></button>
+            <div class="" id="historyList"></div>
         </div>
         <div id="displayContainer">
             <div id="mainDisplay"></div>
