History btn will not populate if it alrdy exists

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <div class="container">
         <div class="cityList">
             Search for a city: <br>
-            <input type="text" id="location"/>
-            <button id="submitBtn"><i class="fas fa-search"></i></button>
+            <form id="input-form">
+                <input type="text" id="location"/>
+                <button type="submit" id="submitBtn"><i class="fas fa-search"></i></button>    
+            </form>
             <div class="" id="historyList"></div>
         </div>
         <div id="displayContainer">
